feat: ACRCloud integration and updated PublisherAgreement royalty split

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/archiver": "^7.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/multer": "^2.0.0",
+    "acrcloud": "^1.4.0",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "axios": "^1.13.2",
