--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev:server": "tsx watch server/index-sqlite.ts > server.log 2>&1",
     "start": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "cross-env NODE_ENV=production tsx server/index-sqlite.ts"
   },
   "dependencies": {
     "@google/genai": "^1.37.0",
     "@types/adm-zip": "^0.5.7",
     "@types/archiver": "^7.0.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/form-data": "^2.2.1",
     "@types/multer": "^2.0.0",
     "acrcloud": "^1.4.0",
     "adm-zip": "^0.5.16",
@@ -27,6 +29,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "form-data": "^4.0.5",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.562.0",
