--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "tsx": "^4.7.0",
+    "cross-env": "^10.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -47,8 +49,6 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "concurrently": "^8.2.2",
-    "cross-env": "^10.1.0",
-    "tsx": "^4.7.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
